@@ -13,6 +13,8 @@ import stroom.receive.common.AttributeMapValidator;
 import stroom.receive.common.RequestHandler;
 import stroom.receive.common.StroomStreamException;
 import stroom.receive.common.StroomStreamProcessor;
+import stroom.security.api.RequestAuthenticator;
+import stroom.security.api.UserIdentity;
 import stroom.util.io.ByteCountInputStream;
 import stroom.util.io.StreamUtil;
 
@@ -20,11 +22,13 @@ import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
 import java.io.IOException;
+import java.util.Optional;
 import java.util.concurrent.atomic.AtomicInteger;
 import javax.inject.Inject;
 import javax.inject.Provider;
 import javax.servlet.http.HttpServletRequest;
 import javax.servlet.http.HttpServletResponse;
+import javax.ws.rs.core.HttpHeaders;
 
 /**
  * Main entry point to handling proxy requests.
@@ -42,16 +46,19 @@ public class ProxyRequestHandler implements RequestHandler {
     private final AttributeMapFilter attributeMapFilter;
     private final LogStream logStream;
     private final Provider<ReceiveDataConfig> receiveDataConfigProvider;
+    private final RequestAuthenticator requestAuthenticator;
 
     @Inject
     public ProxyRequestHandler(final ReceiveStreamHandlers receiveStreamHandlerProvider,
                                final AttributeMapFilterFactory attributeMapFilterFactory,
                                final LogStream logStream,
-                               final Provider<ReceiveDataConfig> receiveDataConfigProvider) {
+                               final Provider<ReceiveDataConfig> receiveDataConfigProvider,
+                               final RequestAuthenticator requestAuthenticator) {
         this.receiveStreamHandlerProvider = receiveStreamHandlerProvider;
         this.logStream = logStream;
         attributeMapFilter = attributeMapFilterFactory.create();
         this.receiveDataConfigProvider = receiveDataConfigProvider;
+        this.requestAuthenticator = requestAuthenticator;
     }
 
     @Override
@@ -65,87 +72,128 @@ public class ProxyRequestHandler implements RequestHandler {
     }
 
     private void stream(final HttpServletRequest request, final HttpServletResponse response) {
+        final ReceiveDataConfig receiveDataConfig = receiveDataConfigProvider.get();
         int returnCode = HttpServletResponse.SC_OK;
 
         final long startTimeMs = System.currentTimeMillis();
         final AttributeMap attributeMap = AttributeMapUtil.create(request);
-        try {
-            // Validate the supplied attributes.
-            AttributeMapValidator.validate(
-                    attributeMap,
-                    () -> receiveDataConfigProvider.get().getMetaTypes());
+        final String authorisationHeader = attributeMap.get(HttpHeaders.AUTHORIZATION);
 
-            final String feedName = attributeMap.get(StandardHeaderArguments.FEED);
-            if (feedName == null || feedName.trim().isEmpty()) {
-                throw new StroomStreamException(StroomStatusCode.FEED_MUST_BE_SPECIFIED, attributeMap);
-            }
-            final String typeName = attributeMap.get(StandardHeaderArguments.TYPE);
+        // If token authentication is required but no token is supplied then error.
+        if (receiveDataConfig.isRequireTokenAuthentication() &&
+                (authorisationHeader == null || authorisationHeader.isBlank())) {
+            throw new StroomStreamException(StroomStatusCode.CLIENT_TOKEN_REQUIRED, attributeMap);
+        }
 
-            try (final ByteCountInputStream inputStream = new ByteCountInputStream(request.getInputStream())) {
-                // Test to see if we are going to accept this stream or drop the data.
-                if (attributeMapFilter.filter(attributeMap)) {
-                    // Consume the data
-                    receiveStreamHandlerProvider.handle(feedName, typeName, attributeMap, handler -> {
-                        final StroomStreamProcessor stroomStreamProcessor = new StroomStreamProcessor(
+        // Authenticate the request token if there is one.
+        final Optional<UserIdentity> optionalUserIdentity = requestAuthenticator.authenticate(request);
+
+        // Add the user identified in the token (if present) to the attribute map.
+        optionalUserIdentity
+                .map(UserIdentity::getId)
+                .ifPresent(id -> attributeMap.put("UploadUser", id));
+
+        if (receiveDataConfig.isRequireTokenAuthentication() && optionalUserIdentity.isEmpty()) {
+            // If token authentication is required, but we could not verify the token then error.
+            throw new StroomStreamException(StroomStatusCode.CLIENT_TOKEN_NOT_AUTHORISED, attributeMap);
+
+        } else {
+            // Remove authorization header from attributes.
+            attributeMap.remove(HttpHeaders.AUTHORIZATION);
+
+            try {
+                // Validate the supplied attributes.
+                AttributeMapValidator.validate(
+                        attributeMap,
+                        receiveDataConfig::getMetaTypes);
+
+                final String feedName = attributeMap.get(StandardHeaderArguments.FEED);
+                if (feedName == null || feedName.trim().isEmpty()) {
+                    throw new StroomStreamException(StroomStatusCode.FEED_MUST_BE_SPECIFIED, attributeMap);
+                }
+                final String typeName = attributeMap.get(StandardHeaderArguments.TYPE);
+
+                try (final ByteCountInputStream inputStream = new ByteCountInputStream(request.getInputStream())) {
+                    // Test to see if we are going to accept this stream or drop the data.
+                    if (attributeMapFilter.filter(attributeMap)) {
+                        // Consume the data
+                        receiveStreamHandlerProvider.handle(feedName, typeName, attributeMap, handler -> {
+                            final StroomStreamProcessor stroomStreamProcessor = new StroomStreamProcessor(
+                                    attributeMap,
+                                    handler,
+                                    new ProgressHandler("Receiving data"));
+                            stroomStreamProcessor.processRequestHeader(request);
+                            stroomStreamProcessor.processInputStream(inputStream, "");
+                        });
+
+                        final long duration = System.currentTimeMillis() - startTimeMs;
+                        logStream.log(
+                                RECEIVE_LOG,
                                 attributeMap,
-                                handler,
-                                new ProgressHandler("Receiving data"));
-                        stroomStreamProcessor.processRequestHeader(request);
-                        stroomStreamProcessor.processInputStream(inputStream, "");
-                    });
+                                "RECEIVE",
+                                request.getRequestURI(),
+                                returnCode,
+                                inputStream.getCount(),
+                                duration);
 
-                    final long duration = System.currentTimeMillis() - startTimeMs;
-                    logStream.log(
-                            RECEIVE_LOG,
-                            attributeMap,
-                            "RECEIVE",
-                            request.getRequestURI(),
-                            returnCode,
-                            inputStream.getCount(),
-                            duration);
-
-                } else {
-                    // Just read the stream in and ignore it
-                    final byte[] buffer = new byte[StreamUtil.BUFFER_SIZE];
-                    while (inputStream.read(buffer) >= 0) {
-                        // Ignore data.
-                        if (LOGGER.isTraceEnabled()) {
-                            LOGGER.trace(new String(buffer));
+                    } else {
+                        // Just read the stream in and ignore it
+                        final byte[] buffer = new byte[StreamUtil.BUFFER_SIZE];
+                        while (inputStream.read(buffer) >= 0) {
+                            // Ignore data.
+                            if (LOGGER.isTraceEnabled()) {
+                                LOGGER.trace(new String(buffer));
+                            }
                         }
-                    }
-                    returnCode = HttpServletResponse.SC_OK;
-                    LOGGER.warn("\"Dropped stream\",{}", CSVFormatter.format(attributeMap));
+                        returnCode = HttpServletResponse.SC_OK;
+                        LOGGER.warn("\"Dropped stream\",{}", CSVFormatter.format(attributeMap));
 
-                    final long duration = System.currentTimeMillis() - startTimeMs;
+                        final long duration = System.currentTimeMillis() - startTimeMs;
+                        logStream.log(
+                                RECEIVE_LOG,
+                                attributeMap,
+                                "DROP",
+                                request.getRequestURI(),
+                                returnCode,
+                                inputStream.getCount(),
+                                duration);
+                    }
+                }
+            } catch (final StroomStreamException e) {
+                StroomStreamException.sendErrorResponse(request, response, e);
+                returnCode = e.getStroomStatusCode().getCode();
+
+                LOGGER.warn("\"handleException()\",{},\"{}\"",
+                        CSVFormatter.format(attributeMap),
+                        CSVFormatter.escape(e.getMessage()));
+
+                final long duration = System.currentTimeMillis() - startTimeMs;
+                if (StroomStatusCode.FEED_IS_NOT_SET_TO_RECEIVED_DATA.equals(e.getStroomStatusCode())) {
                     logStream.log(
                             RECEIVE_LOG,
                             attributeMap,
-                            "DROP",
+                            "REJECT",
                             request.getRequestURI(),
                             returnCode,
-                            inputStream.getCount(),
+                            -1,
+                            duration);
+                } else {
+                    logStream.log(
+                            RECEIVE_LOG,
+                            attributeMap,
+                            "ERROR",
+                            request.getRequestURI(),
+                            returnCode,
+                            -1,
                             duration);
                 }
-            }
-        } catch (final StroomStreamException e) {
-            StroomStreamException.sendErrorResponse(request, response, e);
-            returnCode = e.getStroomStatusCode().getCode();
 
-            LOGGER.warn("\"handleException()\",{},\"{}\"",
-                    CSVFormatter.format(attributeMap),
-                    CSVFormatter.escape(e.getMessage()));
+            } catch (final IOException | RuntimeException e) {
+                RuntimeException unwrappedException = StroomStreamException.sendErrorResponse(request, response, e);
+                returnCode = HttpServletResponse.SC_INTERNAL_SERVER_ERROR;
 
-            final long duration = System.currentTimeMillis() - startTimeMs;
-            if (StroomStatusCode.FEED_IS_NOT_SET_TO_RECEIVED_DATA.equals(e.getStroomStatusCode())) {
-                logStream.log(
-                        RECEIVE_LOG,
-                        attributeMap,
-                        "REJECT",
-                        request.getRequestURI(),
-                        returnCode,
-                        -1,
-                        duration);
-            } else {
+                LOGGER.error("\"handleException()\",{}", CSVFormatter.format(attributeMap), unwrappedException);
+                final long duration = System.currentTimeMillis() - startTimeMs;
                 logStream.log(
                         RECEIVE_LOG,
                         attributeMap,
@@ -156,22 +204,7 @@ public class ProxyRequestHandler implements RequestHandler {
                         duration);
             }
 
-        } catch (final IOException | RuntimeException e) {
-            RuntimeException unwrappedException = StroomStreamException.sendErrorResponse(request, response, e);
-            returnCode = HttpServletResponse.SC_INTERNAL_SERVER_ERROR;
-
-            LOGGER.error("\"handleException()\",{}", CSVFormatter.format(attributeMap), unwrappedException);
-            final long duration = System.currentTimeMillis() - startTimeMs;
-            logStream.log(
-                    RECEIVE_LOG,
-                    attributeMap,
-                    "ERROR",
-                    request.getRequestURI(),
-                    returnCode,
-                    -1,
-                    duration);
+            response.setStatus(returnCode);
         }
-
-        response.setStatus(returnCode);
     }
 }
